chore(refactor): carousel component

--- a/src/styles/Carousel.scss
+++ b/src/styles/Carousel.scss
@@ -1,36 +1,36 @@
 $loaderColor: #7b59ff;
 
-.BrainhubCarousel__container {
+.TestCarousel__container {
   width: 100%;
   overflow: hidden;
 }
 
-.BrainhubCarousel {
+.TestCarousel {
   overflow: hidden;
   display: flex;
   align-items: center;
 
-  &.BrainhubCarousel--isRTL {
+  &.TestCarousel--isRTL {
     direction: rtl;
 
-    .BrainhubCarousel__trackContainer {
-      .BrainhubCarousel__track {
+    .TestCarousel__trackContainer {
+      .TestCarousel__track {
         direction: rtl;
       }
     }
   }
 
-  .BrainhubCarousel__trackContainer {
+  .TestCarousel__trackContainer {
     width: 100%;
     overflow: hidden;
-    .BrainhubCarousel__track {
+    .TestCarousel__track {
       display: flex;
       overflow: hidden;
       list-style: none;
       margin: 0;
       padding: 0;
 
-      &.BrainhubCarousel__track--transition {
+      &.TestCarousel__track--transition {
         transition: transform;
       }
     }
@@ -38,12 +38,12 @@ $loaderColor: #7b59ff;
 }
 
 /* arrows */
-.BrainhubCarousel__arrows {
+.TestCarousel__arrows {
   cursor: pointer;
 }
 
 /* loader */
-.BrainhubCarousel__loader {
+.TestCarousel__loader {
   width: 50px;
   height: 50px;
   border-radius: 100%;
