feat: carouse dots

--- a/src/styles/CarouselItem.scss
+++ b/src/styles/CarouselItem.scss
@@ -4,7 +4,7 @@
   align-items: center;
   position: relative;
   overflow: hidden;
-  padding: 0 13px;
+  // padding: 0 13px;
   margin-top: 50px;
   img{
     max-width: 100%;
